PassStore_2/src/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-1.7.0-ibm-1.7.0.4.0.x86_64/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
/home/gabor/bluej/lib/bluejcore.jar:/home/gabor/bluej/lib/junit-4.8.2.jar:/home/gabor/NetBeansProjects/PassStore_2/src
-d
/home/gabor/NetBeansProjects/PassStore_2/src/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/home/gabor/bluej/lib/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/home/gabor/NetBeansProjects/PassStore_2/src/PassStore_2/Cripto.java
<---- end of javadoc command ---->
Loading source file /home/gabor/NetBeansProjects/PassStore_2/src/PassStore_2/Cripto.java...
Constructing Javadoc information...
Standard Doclet version 1.7.0
Building tree for all the packages and classes...
Generating /home/gabor/NetBeansProjects/PassStore_2/src/doc/PassStore_2/Cripto.html...
/home/gabor/NetBeansProjects/PassStore_2/src/PassStore_2/OpenVia.java:14: error: package org.jsoup does not exist
import org.jsoup.Jsoup;
                ^
/home/gabor/NetBeansProjects/PassStore_2/src/PassStore_2/OpenVia.java:15: error: package org.jsoup.nodes does not exist
import org.jsoup.nodes.Document;
                      ^
Generating /home/gabor/NetBeansProjects/PassStore_2/src/doc/PassStore_2/package-frame.html...
Generating /home/gabor/NetBeansProjects/PassStore_2/src/doc/PassStore_2/package-summary.html...
Generating /home/gabor/NetBeansProjects/PassStore_2/src/doc/constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating /home/gabor/NetBeansProjects/PassStore_2/src/doc/allclasses-frame.html...
Generating /home/gabor/NetBeansProjects/PassStore_2/src/doc/allclasses-noframe.html...
Generating /home/gabor/NetBeansProjects/PassStore_2/src/doc/index.html...
Generating /home/gabor/NetBeansProjects/PassStore_2/src/doc/stylesheet.css...
2 errors
